--- a/pg-base/Dockerfile
+++ b/pg-base/Dockerfile
@@ -1,6 +1,8 @@
 FROM postgres:14-alpine
 
 ENV GOSU_VERSION 1.16
+ENV PG_PARTMAN_VERSION v4.7.4
+
 RUN set -eux; \
 	\
 	apk add --no-cache --virtual .gosu-deps \
@@ -29,3 +31,28 @@ RUN set -eux; \
 	gosu nobody true
 
 RUN apk add --update iputils
+
+# Install pg_partman
+RUN set -ex \
+    # Download pg_partman
+    && wget -O pg_partman.tar.gz "https://github.com/pgpartman/pg_partman/archive/$PG_PARTMAN_VERSION.tar.gz" \
+    # Create a folder to put the src files in 
+    && mkdir -p /usr/src/pg_partman \
+    # Extract the src files
+    && tar \
+        --extract \
+        --file pg_partman.tar.gz \
+        --directory /usr/src/pg_partman \
+        --strip-components 1 \
+    # Delete src file tar
+    && rm pg_partman.tar.gz \
+    # Move to src file folder
+    && cd /usr/src/pg_partman \
+    # Build the extension
+    && make \
+    # Install the extension
+    && make install \
+    # Delete the src files for pg_partman
+    && rm -rf /usr/src/pg_partman \
+    # Delete the dependancies for downloading and building the extensions, we no longer need them
+    && apk del .fetch-deps .build-deps
